meal controller #show method added for meal mdal from meal history
